--- a/public/css/dent.css
+++ b/public/css/dent.css
@@ -443,15 +443,6 @@ form .ng-dirty.ng-invalid{
     /*zoom: .8;*/
 /*}*/
 
-.contactsImage {
-    width: 500px;
-    overflow: hidden;
-    height: 300px;
-}
-
-.contactsImage img {
-    width: 500px;
-}
 
 .albumImages {
     padding-top: 10px;
@@ -466,4 +457,60 @@ form .ng-dirty.ng-invalid{
 .additional {
     color: #979797;
     font-weight: normal;
+}
+
+.carousel-fade .carousel-inner .item {
+    -webkit-transition-property: opacity;
+    transition-property: opacity;
+}
+.carousel-fade .carousel-inner .item,
+.carousel-fade .carousel-inner .active.left,
+.carousel-fade .carousel-inner .active.right {
+    opacity: 0;
+}
+.carousel-fade .carousel-inner .active,
+.carousel-fade .carousel-inner .next.left,
+.carousel-fade .carousel-inner .prev.right {
+    opacity: 1;
+}
+.carousel-fade .carousel-inner .next,
+.carousel-fade .carousel-inner .prev,
+.carousel-fade .carousel-inner .active.left,
+.carousel-fade .carousel-inner .active.right {
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+}
+.carousel-fade .carousel-control {
+    z-index: 2;
+}
+html,
+body,
+.carousel,
+.carousel-inner,
+.carousel-inner .item {
+    height: 100%;
+}
+.item:nth-child(1) {
+    background: #74C390;
+}
+.item:nth-child(2) {
+    background: #51BCE8;
+}
+.item:nth-child(3) {
+    background: #E46653;
+}
+
+.most-useful-services .img-circle {
+    margin: 0 auto;
+    display: block;
+}
+
+.most-useful-services h2 {
+    text-align: center;
+}
+
+.most-useful-services p {
+    text-align: justify;
+    font-weight: bold;
 }
