--- a/public/css/admin/employees.css
+++ b/public/css/admin/employees.css
@@ -80,3 +80,49 @@ h3 .additional {
     text-align: center;
     padding-top: 10px;
 }
+
+#sortable {
+    list-style: none;
+    padding: 0;
+}
+
+#sortable li {
+    display: inline-block;
+    width: 170px;
+    height: 150px;
+    overflow: hidden;
+}
+#sortable li.ui-state-highlight {
+    background: #e8e8e8;
+}
+
+#sortable .imageContainer {
+    display: block;
+    height: 110px;
+    overflow: hidden;
+    margin-bottom: 5px;
+    padding: 5px;
+    background-color: #f5f5f5;
+}
+#sortable li a {
+    display: block;
+    height: 95px;
+    overflow: hidden;
+}
+#sortable li a img {
+    margin: 5px auto;
+    display: block;
+}
+
+#sortable li span.controls {
+    opacity: 0;
+    display: block;
+    margin: 0 auto;
+    width: 130px;
+    transition: 400ms;
+}
+
+#sortable li:hover span.controls,
+#sortable li.active span.controls {
+    opacity: 1;
+}
