--- a/public/css/admin/controlPanel.css
+++ b/public/css/admin/controlPanel.css
@@ -28,11 +28,12 @@ body {
     height: 60px;
     background-color: #f5f5f5;
     border-top: 1px solid #e3e3e3;
+}
 
-
-
-
-
-
-
+.greyRow {
+    opacity: .23;
+    transition: 300ms;
+}
+.greyRow:hover {
+    opacity: 1;
 }
